# general-python-project-template

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: pre-commit.yml  release-please.yml  test.yml
